@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9939';
+our $VERSION='0.9940';
 
 
 use 5.005;
