@@ -45,6 +45,14 @@
 ################################################################
 
 
+2011-07-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9940 released.
+
+        * Now forcing Term::RawInput to install early in
+          Makefile.PL.
+
+
 2011-07-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9939 released.
